[package]
name = "cat_solver"
description = "Rust bindings for the Kissat SAT solver"
version = "0.1.0"
license = "MIT"
authors = ["Justin Blanchard <UncombedCoconut@gmail.com>"]
edition = "2021"
repository = "https://github.com/UncombedCoconut/cat_solver/"
keywords = ["SAT", "solver", "logic", "satisfiability", "cadical", "kissat"]
categories = ["mathematics", "science"]
readme = "README.md"
links = "kissat"
exclude = ["kissat/src/makefile", "kissat/scripts", "kissat/test"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
